--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
                 <img id = "photo" src="photo.png" alt="MyPhoto" width="250" height="250">
                 <h2>Jaishma Usha</h2>
 		        <p class="job-title">Software Developer</p>
-                <p>Ontario, Canada.</p>
+                <p>Toronto, Ontario, Canada</p>
                 <a href="mailto:jaishmarajan8@gmail.com"><i class="fa fa-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/jaishmausha/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ju980309" target="_blank"><i class="fab fa-github"></i></a>
-                <!-- <a href="https://steamcommunity.com/id/labmember000/" target="_blank"><i class="fab fa-steam"></i></a> -->
+                <a href="https://github.com/jaishmau39" target="_blank"><i class="fab fa-github"></i></a>
             </div>
         </div>
 
